--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
        <a id="clickMe"
-            href="itms-services:///?action=download-manifest&url=https://gitee.com/insall/ipa-install/raw/master/manifest.plist">点击....下载</a>
+            href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/ios-install/KLine/main/manifest.plist">点击....下载</a>
     </body>
     </html>
 </DOCTYPE>
